fix spacing and alignment on review section

--- a/src/Home/Review/Review.css
+++ b/src/Home/Review/Review.css
@@ -1,4 +1,4 @@
-#app {
+/* #app {
     height: 100%;
   }
   html,
@@ -26,16 +26,11 @@
     font-size: 18px;
     background: #fff;
   
-    /* Center slide text vertically */
+  
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
+
+   */
